2004-05-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (exec_cmd): Flush polyline to X-server when it reaches
	half the maximum single request size supported on the current display.

	* term/dumb.trm term/gd.trm term/pfg.trm term/x11.trm: The enhanced text
	overprint parameter was used as an (int) in some drivers, even though it
	is declared as a TBOOLEAN.  Change it to (int) everywhere.

2004-05-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c src/term.c term/hpljii.trm: SF bug #953887 non-portable C
	code (prototypes & TBOOLEAN): input parameter for routines cannot be
	char, they must be int.

2004-05-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (mainloop): Add a 100 usec delay to the event flush 
	loop, so that if the other end of the pipe is jammed (gnuplot STOPPED)
	it doesn't monopolize CPU cycles. Fixes user-triggered error condition 
	reported in bug #930426.

2004-05-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graphics.c (plot_boxes): Clip lower border of
	boxxyerrorbars, too.
	(do_plot): Regrouped master switch over plot types.  Draw box
	first in BOXERROR mode, to keep the lower part of the errorbar
	visible.

	* src/util.c (mant_exp): Extend technique for rounding exponents
	depending on the printf format precison of the mantissa to format
	specifiers %l and %L used for log bases other than 10.  Fixes SF
	bug #851685.

2004-05-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/debug.trm (DEBUG_arrow): Fix type of 'head' argument
	overlooked in earlier global change.

	* src/plot2d.c (get_data): Fix mininum number of columnts for
	boxerrorbars style.  Fixed handling of 4-column boxerrorbars in
	case of "set boxwidth -2" to match the documentation.

	* src/graphics.c (plot_impulses): Fix bug in clipping of impulses
	for out-of-range points.  Was using an integer value to store a
	floating-point temporary number.
